align start stop restart score timer at the top. added blanket for start game counter.

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,27 @@ body {
     margin: 0;
 }
 
+.container {
+    width: 1000px;
+    height: 1000px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.blanket {
+    width: 750px;
+    height: 600px;
+    position: absolute;
+    z-index: 1;
+    background-color: black;
+    opacity: 0;
+    margin-left: 100px;
+    font-size: 300px;
+    color: white;
+    text-align: center;
+    padding-top: 100px;
+}
 
 #board {
     width: 500px;
@@ -29,11 +50,18 @@ body {
 .buttonHolder {
     width: 100px;
     height: 100px;
+    max-width: 200px;
     justify-content: center;
     align-content: center;
     font-size: 20px;
 }
 
-p {
-    font-size: 45px;
+.scoreBoard{
+    margin-left: 350px;
+    font-size: 40px;
+}
+
+.countDownTimer{
+    margin-left: 300px;
+    font-size: 40px;
 }
